--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
+    "dompurify": "^3.2.3",
     "formik": "^2.4.6",
     "next": "15.0.3",
     "react": "^18.2.0",
