--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-phone-number-input": "^3.4.10",
+    "react-world-flags": "^1.6.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-world-flags": "^1.6.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
