--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.1",
     "react-phone-number-input": "^3.4.10",
     "react-world-flags": "^1.6.0",
+    "sharp": "^0.33.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
